# shrd100_ps-

./: .gitlab-ci.yml  README.md
00_doc/: 协议文档链接.txt
00_doc/原理图/: SHRD100_CORE_T1 修改记录.xlsx
01_code/det_alg/: .cproject  .project  det_alg.prj
01_code/det_alg/_ide/: hwspec.checksum
01_code/det_alg/_ide/psinit/: psu_init.tcl
01_code/det_alg/src/: cfg.h  lscript.ld  main.c
01_code/det_alg/src/app/: app_init.c  app_init.h
01_code/det_alg/src/cfg/: shrd_config.c  shrd_config.h
01_code/det_alg/src/inc/: common_define.h  radar_common.h  radar_defines.h  radar_error.h  radar_utils.h
01_code/hw_spec/droneid_PL_0A030023/: droneid_PL_0A030023.ltx  readme.txt
01_code/hw_spec/droneid_PL_0B030014/: droneid_PL_0B030014.ltx  droneid_PL_0B030014.xsa  readme.txt
01_code/shrd100_app/: .cproject  .project  shrd100_app.prj
01_code/shrd100_app/_ide/: hwspec.checksum
01_code/shrd100_app/src/: lscript.ld  main.c
01_code/shrd100_app/src/app/: app_init.c  app_init.h
01_code/shrd100_app/src/app/devInfo_process/: CMakeLists.txt  devInfo_process.c  devInfo_process.h
01_code/shrd100_app/src/cfg/: flash_mmap.h  shrd_config.c  (+3 more)
01_code/shrd100_app_system/: .cproject  .project  shrd100_app_system.sprj
01_code/shrd100_plt/: .cproject  .project  platform.spr  platform.tcl
01_code/shrd100_plt/hw/: psu_init.h  psu_init.html  psu_init_gpl.c
01_code/shrd100_plt/tempdsa/: droneid_PL_0A030023.xsa  psu_init.c  psu_init_gpl.h
01_code/shrd100_plt/zynqmp_fsbl/: Makefile  scatter_a53_64.scat  scatter_r5.scat
01_code/shrd100_plt/zynqmp_pmufw/: Makefile
02_release/: .gitignore
(+327 files in other folders)
